samples/_failures_safe/1761400354_6edfd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3fb6a32.c: In function ‘main’:
./samples/SAFE/__tmp_b3fb6a32.c:159:25: error: expected ‘)’ at end of input
  159 |     add_edge(&g, 1, 3, 1
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_b3fb6a32.c:159:5: error: expected declaration or statement at end of input
  159 |     add_edge(&g, 1, 3, 1
      |     ^~~~~~~~
